--- a/service-scenicspot/src/main/resources/application.properties
+++ b/service-scenicspot/src/main/resources/application.properties
@@ -11,12 +11,12 @@ eureka.client.fetch-registry=false
 spring.datasource.name=scenicspot
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/scenicspot?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
-spring.datasource.username=root
-spring.datasource.password=123456
-#spring.datasource.url=jdbc:mysql://47.103.15.187:3306/scenicspot?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+#spring.datasource.url=jdbc:mysql://localhost:3306/scenicspot?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
 #spring.datasource.username=root
-#spring.datasource.password=Abc123!?
+#spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://47.103.15.187:3306/scenicspot?useUnicode=true&characterEncoding=utf-8&useSSL=false&autoReconnect=true&failOverReadOnly=false&allowMultiQueries=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=Abc123!?
 
 # druid数据源连接池相关参数设置
 # 初始化连接数，最小，最大连接数
